WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
270318
REGRESSION (
275244@main
): Crash in MediaCapability::MediaCapability when loading 'about:blank'
https://bugs.webkit.org/show_bug.cgi?id=270318
Summary
REGRESSION (275244@main): Crash in MediaCapability::MediaCapability when load...
Andy Estes
Reported
2024-02-29 13:50:43 PST
SSIA
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-02-29 13:51:04 PST
<
rdar://problem/123856265
>
Andy Estes
Comment 2
2024-02-29 13:57:57 PST
Pull request:
https://github.com/WebKit/WebKit/pull/25317
EWS
Comment 3
2024-02-29 19:36:38 PST
Committed
275533@main
(144facca6435): <
https://commits.webkit.org/275533@main
> Reviewed commits have been landed. Closing PR #25317 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug